# xBOT

./: README.md
pico_code/: CMakeLists.txt  FreeRTOSConfig.h  test.cpp
ros2_ws/src/full_assembly_v1/: CMakeLists.txt  package.xml
ros2_ws/src/full_assembly_v1/config/: joint_names_full_assembly_v1.yaml
ros2_ws/src/full_assembly_v1/launch/: display.launch  gazebo.launch
ros2_ws/src/full_assembly_v1/meshes/: base_link.STL  bot_leg_link.STL  top_leg_link.STL  top_link.STL  wheel_link.STL
ros2_ws/src/full_assembly_v1/urdf/: full_assembly_v1.csv  full_assembly_v1.urdf
ros2_ws/src/full_assembly_v1_config/: CMakeLists.txt  package.xml
ros2_ws/src/full_assembly_v1_config/config/: full_assembly_v1.ros2_control.xacro  full_assembly_v1.srdf  full_assembly_v1.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
ros2_ws/src/full_assembly_v1_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/leg_v2/: CMakeLists.txt  package.xml
ros2_ws/src/leg_v2/launch/: display.launch  gazebo.launch
ros2_ws/src/leg_v2/meshes/: base_link.STL  top_link.STL  wheel_link.STL
ros2_ws/src/leg_v2/urdf/: leg_v2.csv  leg_v2.urdf
ros2_ws/src/leg_v2_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/leg_v2_moveit_config/config/: gazebo_ros2_control.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  leg_v2.ros2_control.xacro  leg_v2.srdf  leg_v2.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/leg_v2_moveit_config/launch/: combined.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
